--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -52415,7 +52415,7 @@
     "import plotly.express as px\n",
     "import nbformat\n",
     "\n",
-    "car_data = pd.read_csv('C:/Users/Luli/Desktop/Proyecto 5/Proyecto5/vehicles_us.csv') # leer los datos\n",
+    "car_data = pd.read_csv('../vehicles_us.csv') # leer los datos\n",
     "fig = px.histogram(car_data, x=\"odometer\") # crear un histograma\n",
     "fig.show() # crear gráfico de dispersión"
    ]
